--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,10 @@
+name: webview_app
+description: Flutter WebView APK
+
+publish_to: 'none'
+
+environment:
+  sdk: ">=3.0.0 <4.0.0"
 dependencies:
   flutter:
     sdk: flutter
