--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,24 @@
 name: webview_app
-description: Flutter WebView APK
+description: Flutter WebView APK with Lottie Splash
 
 publish_to: 'none'
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
+
   webview_flutter: ^4.7.0
+  lottie: ^3.1.0
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+flutter:
+  uses-material-design: true
+
+  assets:
+    - assets/lottie/splash.json
